feat: implement rankings result vertical
